Fix navbar links and ensure sections titles are visible when navigating to them

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,8 +39,7 @@ h2 {
 }
 
 .section {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+   padding-top: 4rem; /* ensure headings are visible after clicking links on navbar */
 }
 /* Buttons */
 .custom-button-filled{
